Mon, 18 Feb 2008 21:17:48 +0100 <thp@perli.net>
Updated French translation for 0.11.0

	* data/po/fr.po: Updated French translation by Jérôme Chabod

Sun, 17 Feb 2008 13:50:09 +0100 <thp@perli.net>
Fix calculation of average percentage done

	* src/gpodder/services.py: Fix calculation of average percentage done
	for downloads, thanks to Jérôme Chabod <jerome.chabod@ifrance.com> for
	the patch

Sun, 17 Feb 2008 13:33:38 +0100 <thp@perli.net>
Updated translations for 0.11.0

	* data/messages.pot: Refreshed messages.pot from source code
	* data/po/de.po: Updated German translation
	* data/po/nl.po: Updated Dutch translation by Pieter De Decker
	* data/po/ru.po: Updated Russian translation by Leonid Ponomarev
	* data/po/cs.po: Updated Czech translation by Ondrej Vesely
	* data/po/sv.po: Updated Swedish translation by Anders Kvist

Thu, 07 Feb 2008 22:15:40 +0100 <thp@perli.net>
Hello, new "expert" configuration editor (about:config-like)

	* data/gpodder.glade: Add gPodderConfigEditor window and add an
	"Advanced..." button to the preferences dialog
	* src/gpodder/config.py: Add a gtk.ListStore tree model to the
	configuration manager and update it when configuration variables
	change; add toggle_flag() and update_field() methods for easy updating
	of fields from the new config editor
	* src/gpodder/gui.py: Add glue code for opening the advanced
	configuration editor from the preferences dialog; add code for the
	gPodder configuration editor (including filtering and field updating);
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=10)

Thu, 07 Feb 2008 20:22:08 +0100 <thp@perli.net>
Support buggy OPML feeds, notify user on OPML import

	* src/gpodder/gui.py: Notify user when no items were found when trying
	to import OPML feeds
	* src/gpodder/opml.py: Make the OPML importer a bit more relaxed, and
	make it accept "url" instead of "xmlUrl", too (for buggy OPML feeds)

Wed, 06 Feb 2008 17:34:56 +0100 <thp@perli.net>
Fix the track length detection
