@@ -1,3 +1,11 @@
+Tue, 19 Feb 2008 07:46:28 +0100 <thp@perli.net>
+Fix bug with MP3 player synchronization file name encodings
+
+	* src/gpodder/sync.py: Apply patch to fix problems with native
+	language encodings on MP3 player synchronization; thanks to Bernd
+	Schlapsi for reporting the problem in Bugzilla
+	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=34)
+
 Mon, 18 Feb 2008 21:17:48 +0100 <thp@perli.net>
 Updated French translation for 0.11.0
 
